# latent-calendar

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: coverage.yml  docs.yml  pr-sync-labels.yml  tests.yml
docs/: draft.md  index.md  methodology.md
docs/examples/: add-calendar-events.md  cal-attribute.md  calendar-customization.md  create-segments.md  event-frequency.md  generation-process.md  plotting-dataframes.md  store-transactions.md
docs/examples/datasets/: bikes-in-chicago.md  store-transactions.md  ufo-sightings.md
docs/examples/model/: pipelines.md  sklearn-compat.md
docs/examples/plotting/: add-calendar-events.md  calendar-customization.md  event-frequency.md  pandas-methods.md
docs/modules/: const.md  datasets.md  extensions.md  generate.md  model.md  plot.md  segments.md  transformers.md  vocab.md
docs/modules/plot/: colors.md  config.md  core.md  elements.md  grid_settings.md  iterate.md
docs/overrides/partials/: comments.html
draft/: index.html
examples/add-calendar-events/: index.html
examples/cal-attribute/: index.html
examples/calendar-customization/: index.html
examples/create-segments/: index.html
examples/datasets/bikes-in-chicago/: index.html
examples/datasets/store-transactions/: index.html
examples/datasets/ufo-sightings/: index.html
examples/event-frequency/: index.html
examples/generation-process/: index.html
examples/model/pipelines/: index.html
examples/model/sklearn-compat/: index.html
examples/plotting-dataframes/: index.html
examples/plotting/add-calendar-events/: index.html
examples/plotting/calendar-customization/: index.html
examples/plotting/event-frequency/: index.html
examples/plotting/pandas-methods/: index.html
examples/store-transactions/: index.html
latent_calendar/: __init__.py  const.py  extensions.py  generate.py  transformers.py  vocab.py
latent_calendar/datasets/: __init__.py
latent_calendar/model/: bayesian_lda.py  latent_calendar.py  utils.py
latent_calendar/plot/: __init__.py  colors.py  config.py  elements.py  grid_settings.py  iterate.py
latent_calendar/plot/core/: __init__.py  calendar.py  model.py
latent_calendar/segments/: __init__.py  convolution.py  hand_picked.py
methodology/: index.html
modules/const/: index.html
modules/datasets/: index.html
modules/extensions/: index.html
modules/generate/: index.html
modules/model/: index.html
modules/plot/: index.html
modules/plot/colors/: index.html
modules/plot/config/: index.html
modules/plot/core/: index.html
modules/plot/elements/: index.html
modules/plot/grid_settings/: index.html
modules/plot/iterate/: index.html
modules/segments/: index.html
modules/transformers/: index.html
modules/vocab/: index.html
overrides/partials/: comments.html
scripts/: plot-post.py
scripts/pymc-slides/: Dockerfile  README.md  create-slide-material.sh  pymc-slides.py  requirements.txt  slides.html  slides.qmd
search/: search_index.json
tests/: test_const.py  test_datasets.py  test_extensions.py  test_generate.py  test_plots.py  test_transformers.py
tests/model/: test_latent_calendar.py  test_model_utils.py
tests/plot/: test_core.py  test_elements.py  test_grid_settings.py  test_iterate.py
tests/segments/: test_convolution.py  test_hand_picked.py
