[tool.poetry]
name = "latent-calendar"
version = "0.0.11"
description = "Analyzing and modeling weekly calendar distributions using latent components"
authors = ["Will Dean <wd60622@gmail.com>"]
readme = "README.md"
homepage = "https://wd60622.github.io/latent-calendar/"
documentation = "https://wd60622.github.io/latent-calendar/"
repository = "https://github.com/wd60622/latent-calendar/"
packages = [
    {include = "latent_calendar"}, 
    {include = "latent_calendar/py.typed"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "*"
scikit-learn = ">=1.0.0"
matplotlib = "*"
conjugate-models = "^0.1.2"
pymc = ">=5.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.18"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ipython = "8.8.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
