[tool.poetry]
name = "latent-calendar"
version = "1.5.0"
description = "Analyzing and modeling weekly calendar distributions using latent components"
authors = ["Will Dean <wd60622@gmail.com>"]
readme = "README.md"
homepage = "https://wd60622.github.io/latent-calendar/"
documentation = "https://wd60622.github.io/latent-calendar/"
repository = "https://github.com/wd60622/latent-calendar/"
packages = [
    {include = "latent_calendar"},
    {include = "latent_calendar/py.typed"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=1.0.0"
scikit-learn = ">=1.0.0"
matplotlib = ">=3.5.0"
conjugate-models = ">=0.8.0"
pymc = { version = ">=5.0.0", optional = true }

[tool.poetry.extras]
pymc = ["pymc"]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ipython = "8.8.0"
tox = "^4.11.4"
pytest-mpl = "^0.17.0"
jupyter = "^1.0.0"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        # tox and distutils
        py312
        py311
        py310

    [testenv]
    deps =
        pytest
        pytest-mpl
        pytest-cov
        pymc
    commands = pytest
"""

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--mpl --mpl-baseline-path=tests/baseline --cov=latent_calendar --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["scripts"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["S101"]
